...
  case gameMedia = "collectibles-game-media"

  var id: String { rawValue }

  var name: LocalizedStringResource {
    switch self {
    case .starter: "Essential Collection"
    case .current: "Modern Systems"
    case .playHistory: "Play History"
    case .xboxHistory: "Xbox History"
    case .nintendoHistory: "Nintendo History"
    case .segaAndArcade: "Arcade & Classics"
    case .gameMedia: "Game Media"
...
